# PokerCalc

./: .gitignore  CMakeLists.txt  Makefile  PokerCalc.creator.user.4.8-pre1  PokerCalc.files  PokerCalc.includes  PokerCalc.pro  README.md  git_add_all.sh  main.cpp  main.pro
include/: Board.h  Card.h  Deck.h  Hand.h  combo.h  defines.h  equity.h  handstrength.h
src/: Board.cpp  CMakeLists.txt  Card.cpp  Deck.cpp  Hand.cpp  Makefile  combo.cpp  equity.cpp  handstrength.cpp  libpoker.pro
